# dark-factory

./: ..env.kate-swp  .envrc  .gitignore  .gitmodules  .jcodemunch.jsonc  .mcp.json  CLAUDE.md  DESIGN.md  RECONCILIATION_PLAN.md  conftest.py  pyproject.toml
dashboard/: .gitignore  Makefile  dark-factory-dashboard-watchdog.service  dark-factory-dashboard-watchdog.timer  dark-factory-dashboard.service  orchestrator.yaml  pyproject.toml
dashboard/src/dashboard/: __main__.py  app.py  config.py
dashboard/src/dashboard/data/: active_tasks.py  burndown.py  chart_utils.py  costs.py  db.py  memory.py  merge_halt.py  merge_queue.py  metrics.py  orchestrator.py  performance.py  reconciliation.py  redux_api.py  stats_utils.py  utils.py  write_journal.py
dashboard/src/dashboard/static/: chart-utils.js  input.css  style.css  tailwind.css
dashboard/src/dashboard/templates/: base.html  burndown.html  costs.html  index.html
dashboard/tests/: _dashboard_helpers.py  _dt_helpers.py  conftest.py  pyrightconfig.json  test_active_tasks.py  test_app.py  test_badge_macros.py  test_burndown_data.py  test_burndown_page.py  test_by_role_chart_lifecycle.py  test_chart_utils.py  test_conftest_import_guard.py  test_costs_data.py  test_costs_page.py  test_costs_panel.py  test_data_utils.py  test_db.py  test_helpers.py  test_memory.py  test_memory_graphs_partial.py  test_memory_partial.py  test_merge_halt.py  test_merge_queue_data.py  test_merge_queue_panel.py  test_metrics_data.py  test_new_aggregators.py  test_orchestrator.py  test_orchestrator_panel.py  test_performance.py  test_performance_panel.py  test_polling_macro.py  test_recon_panel.py  test_reconciliation.py  test_redux_api.py  test_refresh_indicator.py  test_scaffold.py  test_shared_chart_utilities.py  test_stats_utils.py  test_tag_helper.py  test_write_journal.py
escalation/: orchestrator.yaml  pyproject.toml
escalation/src/escalation/: __init__.py  archive.py  models.py  queue.py  server.py  watcher.py
escalation/tests/: conftest.py  test_archive.py  test_queue.py  test_release_workflow.py  test_server.py  test_watcher.py
fused-memory/: .gitignore  fused-memory.service.example-systemd-config  orchestrator.yaml  pyproject.toml
fused-memory/config/: config-docker.yaml  config.yaml
fused-memory/docker/: Dockerfile  docker-compose.yml
fused-memory/scripts/: audit_duplicate_tasks.py  check_asyncmock_assertion_style.py  cleanup_test_collections.py  invalidate_fabricated_shipping_edges.py  migrate_tasks_json_to_sqlite.py
fused-memory/src/fused_memory/: __init__.py
fused-memory/src/fused_memory/backends/: __init__.py  dual_compare_backend.py  graphiti_client.py  invalidation_guard.py  mem0_client.py  sqlite_task_backend.py  (+5 more)
fused-memory/tests/: _fm_helpers.py  conftest.py  test_agent_loop.py  test_async_utils.py  test_audit_duplicate_tasks.py  test_backfill_curator_corpus.py  test_backlog_policy.py  test_bulk_reset_guard.py  test_canonical_tasks_json.py  test_check_asyncmock_assertion_style.py  test_classifier.py  test_cleanup_stale_edges.py  test_comment_hygiene.py  test_config_schema.py  test_conftest_fixtures.py  test_context_assembler.py  test_context_builder.py  test_curator_escalator.py  test_dark_factory_path_guard.py  test_dead_code_removal.py  test_dead_letters_tool.py  test_dlq_mcp_tools.py  test_doc_accuracy.py  test_docstring_accuracy_451.py  test_docstring_edge_semantics_446.py  test_drain_signal_handler.py  test_dual_compare_backend.py  test_durable_queue.py  test_e2e_durable_queue.py  test_enum_models.py  test_event_buffer.py  test_event_queue.py  test_flag_dedup.py  test_fm_helpers.py  test_graph_timeout.py  test_graphiti_quality_433.py  test_graphiti_rebuild_pipeline.py  test_harness.py  test_health_endpoint.py  test_identity_resolution.py  (+61 more)
fused-memory/tests/integration/: test_taskmaster_mcp_contract.py
fused-memory/tests/reconciliation/: test_stage2_resolve_ticket_trust_curator.py  test_stage2_set_task_status_shapes.py
orchestrator/: config.yaml  orchestrator.yaml  pyproject.toml
orchestrator/scripts/: backfill_composite_scores.py  setup-bwrap.sh
orchestrator/src/orchestrator/: __init__.py  analyze_modules.py  artifacts.py  cargo_scope.py  cli.py  config.py  defaults.yaml  event_store.py  git_ops.py  harness.py  mcp_lifecycle.py  merge_queue.py  protocols.py  review_checkpoint.py  run_store.py  scheduler.py  steward.py  task_status.py  usage_gate.py  verify.py  workflow.py
orchestrator/tests/: README.md  _orch_helpers.py  conftest.py  test_analyze_modules.py  test_artifacts.py  test_briefing.py  test_briefing_judge.py  test_briefing_steward.py  test_cargo_scope.py  test_cli.py  test_config.py  test_conftest_helpers.py  test_cost_store_threading.py  test_crash_recovery.py  test_eval_configs.py  test_eval_stub_mcp_session.py  test_event_store.py  test_filterwarnings_guard.py  test_git_ops.py  test_halt_owner.py  test_harness_cancel_workflow.py  test_harness_module_tagging.py  test_harness_prd_tagging.py  test_harness_startup_get_statuses.py  test_harness_terminal_status_watcher.py  test_invoke.py  test_invoke_parsers.py  test_landlock.py  test_mcp_retry.py  test_merge_queue.py  test_metrics.py  test_orphan_l0_reaper.py  test_pid_alive_contract.py  test_plan_tools_server.py  test_pyproject_filterwarnings.py  test_pyright_gate_for_workflow_e2e.py  test_pytest_timeout_config.py  test_reconcile_stranded.py  test_reify_multi_account.py  test_retry_cap.py  (+41 more)
shared/: orchestrator.yaml  pyproject.toml
shared/src/shared/: __init__.py  async_sqlite_base.py  cli_invoke.py  config_dir.py  config_models.py  cost_store.py  locking.py  proc_group.py  pytest_jobserver.py  testing.py  usage_gate.py  vllm_bridge.py
shared/tests/: conftest.py  test_async_sqlite_base.py  test_auth_failed.py  test_cap_retry.py  test_cli_invoke.py  test_cli_invoke_integration.py  test_concurrency.py  test_cost_store.py  test_failover_integration.py  test_locking.py  test_probe_loop.py  test_proc_group.py  test_public_api.py  test_pytest_jobserver.py  test_usage_gate.py  test_usage_gate_exhaustive.py  test_vllm_bridge.py
(+364 files in other folders)
