[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/escalation"]

[project]
name = "escalation"
version = "0.1.0"
description = "Escalation MCP server — agents escalate issues they can't solve at their scope"
requires-python = ">=3.11,<4"
dependencies = [
    "fastmcp>=2.0",
    "inotify_simple>=1.3",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# merge_request tool imports orchestrator at runtime; install this extra when
# the escalation server needs to serve the merge_request MCP tool.
merge = ["orchestrator"]

[tool.uv.sources]
orchestrator = { path = "../orchestrator", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
