[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fused_memory"]

[project]
name = "fused-memory"
version = "0.1.0"
description = "Fused Memory MCP Server — unified Graphiti + Mem0 memory system"
requires-python = ">=3.11,<4"
dependencies = [
    "graphiti-core[falkordb]>=0.28.1",
    "mem0ai>=1.0.10",
    "mcp>=1.9.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "openai>=1.90.0",
    "anthropic>=0.52.0",
    "aiosqlite>=0.20.0",
    "dark-factory-shared",
]

[tool.uv.sources]
dark-factory-shared = { workspace = true }
escalation = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
addopts = "-n auto --dist loadgroup"
# Default per-test timeout — see shared/pyproject.toml for the full rationale
# (UsageGate mock hang, make_gate_mock, asyncio-sleep footguns).
# Slow tests opt out with @pytest.mark.timeout(N).
# thread method instead of signal: signal proved unreliable under pytest-xdist
# workers in practice ("-n auto --dist loadgroup" above). See
# orchestrator/pyproject.toml where signal is used without xdist.
timeout = 60
timeout_method = "thread"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src", "../shared/src", "../escalation/src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.7.1",
    "escalation",
]
