[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fused_memory"]

[project]
name = "fused-memory"
version = "0.1.0"
description = "Fused Memory MCP Server — unified Graphiti + Mem0 memory system"
requires-python = ">=3.11,<4"
dependencies = [
    "graphiti-core[falkordb]>=0.28.1",
    "mem0ai>=1.0.10",
    "mcp>=1.9.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "openai>=1.90.0",
    "anthropic>=0.52.0",
    "aiosqlite>=0.20.0",
    "dark-factory-shared",
]

[tool.uv.sources]
dark-factory-shared = { workspace = true }
escalation = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
addopts = "-n auto --dist loadgroup"
# Default per-test timeout — see shared/pyproject.toml for the full rationale
# (UsageGate mock hang, make_gate_mock, asyncio-sleep footguns).
# Slow tests opt out with @pytest.mark.timeout(N).
# thread method instead of signal: signal proved unreliable under pytest-xdist
# workers in practice ("-n auto --dist loadgroup" above). See
# orchestrator/pyproject.toml where signal is used without xdist.
# Caveat: thread method is best-effort — it prints a stack trace but can't
# actually interrupt a blocking asyncio.sleep in the main thread (see shared/
# pyproject.toml where signal is load-bearing for that reason). Under xdist a
# UsageGate-mock hang will still wedge the worker; the timeout logs the
# traceback but the run may not abort cleanly. Converting such hangs into hard
# failures requires fixing the mock (use shared.testing.make_gate_mock), not
# leaning on this cap.
timeout = 60
timeout_method = "thread"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src", "tests", "../shared/src", "../escalation/src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.7.1",
    "escalation",
]
