[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fused_memory"]

[project]
name = "fused-memory"
version = "0.1.0"
description = "Fused Memory MCP Server — unified Graphiti + Mem0 memory system"
requires-python = ">=3.11,<4"
dependencies = [
    "graphiti-core[falkordb]>=0.28.1",
    "mem0ai>=1.0.10",
    "mcp>=1.9.4",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "openai>=1.90.0",
    "anthropic>=0.52.0",
    "aiosqlite>=0.20.0",
    "dark-factory-shared",
]

[tool.uv.sources]
dark-factory-shared = { workspace = true }
escalation = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "strict"
addopts = "-n auto --dist loadgroup"
# Default per-test timeout — see shared/pyproject.toml for the full rationale
# (UsageGate mock hang, make_gate_mock, asyncio-sleep footguns).
# Slow tests opt out with @pytest.mark.timeout(N).
# thread method instead of signal: signal proved unreliable under pytest-xdist
# workers in practice ("-n auto --dist loadgroup" above). See
# orchestrator/pyproject.toml where signal is used without xdist.
# IMPORTANT — thread method *kills the worker*: pytest-timeout's thread
# handler ends with os._exit(1) (pytest_timeout.timeout_timer in
# pytest-timeout >= 2.x). When this fires under -n auto --dist loadgroup
# the entire xdist worker process dies; if it dies near end-of-suite the
# controller can deadlock waiting for a completion signal that will
# never arrive. Tests with a real-time budget approaching 60s MUST set
# @pytest.mark.timeout(N) to opt up — otherwise a single slow run takes
# down the whole suite. Fix the mock (shared.testing.make_gate_mock)
# rather than leaning on this cap to recover from hangs.
timeout = 60
timeout_method = "thread"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src", "tests", "../shared/src", "../escalation/src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.7.1",
    "escalation",
]
