[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[project]
name = "orchestrator"
version = "0.1.0"
description = "Agent orchestration system — decomposes PRDs into concurrent TDD workflows"
requires-python = ">=3.11,<4"
dependencies = [
    "click>=8.0",
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "escalation",
    "dark-factory-shared[vllm]",
]

[tool.uv.sources]
escalation = { workspace = true }
dark-factory-shared = { workspace = true }

[project.scripts]
orchestrator = "orchestrator.cli:main"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src", "../shared/src", "../escalation/src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
# Each filter pins the exact upstream message emitted by the relevant library
# so that only this specific anti-pattern is fatal.  These strings are
# intentionally narrow (message-anchored, not class-only) to avoid breaking
# unrelated RuntimeWarning / PytestWarning emissions elsewhere in the suite.
# NOTE: If Python/pytest/pytest-asyncio changes the wording (e.g. drops
# apostrophes around _execute_mock_call, adjusts coroutine-object formatting,
# or rewrites the asyncio-mark diagnostic text), these regexes will silently
# stop matching — revisit on pytest/Python/pytest-asyncio upgrades.
filterwarnings = [
    # AsyncMock coroutine leak: coroutine created by mock.return_value.some_method()
    # is never awaited; GC fires inline during test (RuntimeWarning) or after
    # teardown (PytestUnraisableExceptionWarning wrapping the same message).
    # Pins: unittest.mock / CPython warnings machinery.
    "error:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning",
    "error:Exception ignored while finalizing coroutine <coroutine object AsyncMockMixin._execute_mock_call:pytest.PytestUnraisableExceptionWarning",
    # Sync def collected inside an @pytest.mark.asyncio class: mark mismatch.
    # Pins: pytest_asyncio/plugin.py (message emitted at the collection phase).
    "error:The test .* is marked with '@pytest.mark.asyncio' but it is not an async function:pytest.PytestWarning",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.7.1",
]
