[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]

[project]
name = "orchestrator"
version = "0.1.0"
description = "Agent orchestration system — decomposes PRDs into concurrent TDD workflows"
requires-python = ">=3.11,<4"
dependencies = [
    "click>=8.0",
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "escalation",
    "dark-factory-shared[vllm]",
]

[tool.uv.sources]
escalation = { workspace = true }
dark-factory-shared = { workspace = true }

[project.scripts]
orchestrator = "orchestrator.cli:main"

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src", "../shared/src", "../escalation/src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
# Filters are anchored on the *verb* of each anti-pattern, not on specific
# internal symbol names, so that (a) they survive CPython/pytest renames of
# internal coroutine methods and (b) they catch the same anti-pattern even
# when it leaks through a different coroutine than AsyncMock's mixin.
# NOTE: Still message-regex-based, so a wholesale rewrite of the upstream
# wording would silently stop matching — revisit on pytest/Python/pytest-
# asyncio upgrades.
filterwarnings = [
    # Unawaited coroutine leak (most commonly from AsyncMock misuse, but any
    # forgotten `await` trips it).  Two emission paths with distinct shapes:
    #   (1) GC fires inline during the test — CPython emits
    #       RuntimeWarning("coroutine '<name>' was never awaited") directly.
    #   (2) GC fires after teardown — pytest's sys.unraisablehook wraps the
    #       event as PytestUnraisableExceptionWarning.  The exact prefix
    #       varies by CPython version (unraisable.err_msg may be None or a
    #       custom "Exception ignored while finalizing coroutine <...>"):
    #         Python <3.14: "Exception ignored in: <coroutine object ...>"
    #         Python  3.14: "Exception ignored while finalizing coroutine
    #                         <coroutine object ...>: None"
    #       `Exception ignored.*coroutine object` covers both forms without a
    #       literal `:` (filterwarnings uses `:` as field separator, so a
    #       literal `:` in the message regex would misparse the entry).
    "error:coroutine .* was never awaited:RuntimeWarning",
    "error:Exception ignored.*coroutine object:pytest.PytestUnraisableExceptionWarning",
    # Sync def collected inside an @pytest.mark.asyncio class: mark mismatch.
    # Pins: pytest_asyncio/plugin.py (message emitted at the collection phase).
    "error:The test .* is marked with '@pytest.mark.asyncio' but it is not an async function:pytest.PytestWarning",
]
# Default per-test timeout. Catches accidental asyncio-sleep hangs (misconfigured
# UsageGate mock returning a truthy MagicMock from slot.detect_cap_hit — see
# shared.testing.make_gate_mock). Slow tests opt out with @pytest.mark.timeout(N).
# thread method chosen for cross-subproject consistency with fused-memory (which
# requires thread for xdist compat); orchestrator does not run xdist today.
# Note: shared/pyproject.toml intentionally uses signal (no xdist there); thread
# here for consistency with fused-memory and to future-proof if xdist is added.
timeout = 60
timeout_method = "thread"

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.7.1",
]
